# humanoid_movement

./: humanoid_movment.files  humanoid_movment.includes
humanoid_control/: CMakeLists.txt  humanoid_control.files  package.xml
humanoid_control/include/humanoid_control/: HumanoidCtrlNode.h
humanoid_control/src/: HumanoidCtrlNode.cpp
humanoid_ddpg/: CMakeLists.txt  install.py  package.xml  requirements.txt  setup.py
humanoid_ddpg/src/: main_node.py
humanoid_ddpg/src/results/tf_ddpg/: events.out.tfevents.1532300715.murilo-ubuntu
humanoid_gazebo/sakura_control/launch/: sakura_control.launch
humanoid_gazebo/sakura_description/urdf/: SAKURA_FIX_COMPLETE_MESH_SENSOR.urdf
humanoid_gazebo/sakura_gazebo/launch/: gazebo_control.launch  gazebo_control_backlash.launch  sakura_fixed.launch
humanoid_gazebo/sakura_gazebo/worlds/: sakura2.world
humanoid_gazebo/sakura_gazebo/worlds/FLOOR_RUBBER/: model.config
humanoid_gazebo/sakura_gazebo/worlds/FLOOR_TILE/: model.config
humanoid_general/: CMakeLists.txt  humanoid_general.files  humanoid_general.includes  package.xml
humanoid_general/include/humanoid_general/: Enums.h
humanoid_general/src/: Enums.cpp  MathUtils.cpp  State.cpp  basicxml.cpp  spline.cpp
humanoid_interface/: CMakeLists.txt  humanoid_interface.files  package.xml
humanoid_interface/include/humanoid_interface/: HumanoidInterface.h
humanoid_interface/launch/: humanoid_interface.launch  humanoid_interface_gazebo.launch
humanoid_interface/src/: HumanoidInterface.cpp
humanoid_learning/: CMakeLists.txt  package.xml
humanoid_learning/config/: controlParams.yaml
humanoid_learning/include/humanoid_learning/: HumanoidLearningNode.h
humanoid_learning/launch/: humanoidlearning.launch
humanoid_learning/src/: HumanoidLearningNode.cpp  humanoid_learning_node.cpp
humanoid_loadmap/: CMakeLists.txt  humanoid_loadmap.files  humanoid_loadmap.includes  package.xml
humanoid_loadmap/config/: SAKURA_RBDL.urdf  SAKURA_RBDL_FUNFA.urdf  files_config.xml  files_config.yaml  id_map_config.yaml  robot_config_sakura.xml  robot_config_stek.xml  time_config.yaml
humanoid_loadmap/include/humanoid_loadmap/: LoadMapNode.h  Loader.h  Mapping.h
humanoid_loadmap/launch/: loadmap.launch
humanoid_loadmap/src/: LoadMapNode.cpp  loadmap_node.cpp
humanoid_model/: CMakeLists.txt  humanoid_model.files  humanoid_model.includes  package.xml
humanoid_model/config/: robotParams.yaml
humanoid_model/include/humanoid_model/: HumanoidModel.h  HumanoidModelNode.h  InvKin.h  RobotModel.h
humanoid_model/src/: HumanoidModel.cpp  HumanoidModelNode.cpp  RobotModel.cpp  humanoidmodel_node.cpp
humanoid_msgs/: CMakeLists.txt  humanoid_msgs.files  package.xml
humanoid_msgs/cfg/: HumanoidCtrl.cfg  HumanoidInterface.cfg  HumanoidLearning.cfg  HumanoidLipWalkingCmd.cfg  HumanoidLipWalkingCtrl.cfg  HumanoidLipWalkingParams.cfg  HumanoidModelConfig.cfg  HumanoidModelMovCreatorConfig.cfg
humanoid_msgs/msg/: EndEffStateMsg.msg  HeadMoveMsg.msg  HumanoidControlMsg.msg  JointStateMsg.msg  LearningMsg.msg  LipParamsMsg.msg
humanoid_msgs/srv/: InterfaceSrv.srv  LipCmdSrv.srv  LoadHumanoidPropertiesSrv.srv  LoadMapConfigsSrv.srv  MovementSrv.srv
humanoid_qt/movcreator_qt/: CMakeLists.txt  mainpage.dox  package.xml
humanoid_qt/movcreator_qt/include/movcreator_qt/: movecreator.h  qnode.hpp
humanoid_qt/movcreator_qt/launch/: movcreator.launch  movcreator_gazebo.launch
humanoid_qt/movcreator_qt/src/: main.cpp  movecreator.cpp  poseinterface.cpp  qnode.cpp
humanoid_qt/robot_qt/: CMakeLists.txt  package.xml  robot_qt.pro
humanoid_qt/robot_qt/include/robot_qt/: main_window.hpp  qnode.hpp
humanoid_qt/robot_qt/src/: qnode.cpp
humanoid_qt/robot_qt/ui/: main_window.ui
humanoid_robot/: CMakeLists.txt  package.xml
humanoid_walking/: CMakeLists.txt  humanoid_walking.files  humanoid_walking.includes  package.xml
humanoid_walking/config/: walkingParams.yaml
humanoid_walking/include/humanoid_walking/: LipWalk.h  LipWalkNode.h
humanoid_walking/launch/: humanoid_walking.launch  movcreator.launch  walking.launch  walking_gazebo.launch
humanoid_walking/src/: LipWalk.cpp  LipWalkNode.cpp
humanoid_walking/walking_params/paramsMurilo4/: hModel.yaml  wCmd.yaml  wParams.yaml
main_movement/: CMakeLists.txt  package.xml
main_movement/include/main_movement/: movement.h
main_movement/launch/: movement.launch  movement_gazebo.launch
main_movement/src/: movement.cpp  movement_node.cpp
motor_set_control/: CMakeLists.txt  package.xml  porao.page  pose.page
motor_set_control/include/motor_set_control/: jointcommand.h  motorset.h  page.h  pose.h
motor_set_control/pages/: levantar FODENDO CARALHUDO.page
motor_set_control/src/: motorset.cpp  motorset_node.cpp  page.cpp  pose.cpp
