<?xml version="1.0"?>
<package>
  <name>humanoid_msgs</name>
  <version>0.0.0</version>
  <description>
    humanoid_msgs package
    This package includes ROS messages and services for humanoid_robot packages</description>
  <license>BSD</license>
  <author email="murilomend92@gmail.com">Murilo Mendonca</author>
  <maintainer email="murilomend92@gmail.com">Murilo Mendonca</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export></export>
</package>
