<?xml version="1.0"?>
<package format="2">
  <name>movcreator_qt</name>
  <version>0.1.0</version>
  <description>

     movcreator_qt

  </description>
  <maintainer email="Murilo@gmail.com">Murilo</maintainer>
  <author>Murilo</author>
  <license>BSD</license>
	
  <buildtool_depend>catkin</buildtool_depend>
  <depend>qt_build</depend>
  <depend>roscpp</depend>
  <depend>libqt4-dev</depend>
  <depend>message_filters</depend>
  <depend>humanoid_msgs</depend>
  <depend>humanoid_general</depend>
  <depend>motor_set_control</depend>

 
</package>
