<?xml version="1.0"?>
<package>
  <name>humanoid_qt</name>
  <version>0.1.0</version>
  <description>

     humanoid_qt

  </description>
  <maintainer email="Murilo@gmail.com">Murilo</maintainer>
  <author>Murilo</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>humanoid_msgs</build_depend>
  <build_depend>humanoid_general</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>humanoid_msgs</run_depend>
  <run_depend>humanoid_general</run_depend>


 
</package>

